<resources>
    <string name="app_name">Tokki</string>
    <string name="text_add_character">등장인물 추가</string>
    <string name="text_left">왼쪽</string>
    <string name="text_right">오른쪽</string>
    <string name="text_add">추가하기</string>
    <string name="text_delete">삭제하기</string>
    <string name="text_edit_midea">미디어 편집</string>
    <string name="text_gallery">토키 갤러리</string>
    <string name="text_my_album">내 앨범</string>
    <string name="text_delete_poster">기본 배경이미지</string>
    <string name="text_default">기본 이미지로 변경</string>
    <string name="text_color">색상 변경</string>
    <string name="text_choce_distractor">선택지 추가</string>
    <string name="text_choice_interaction">분기를 선택하세요!</string>
    <string name="text_please_input_writer_name">작가명을 입력해주세요.</string>
    <string name="text_please_input_synopsis">줄거리를 입력하세요</string>
    <string name="text_find_account"><u>소셜 계정찾기</u></string>
    <string name="text_find_id"><u>Panbook 계정찾기</u></string>
    <string name="text_find_pw"><u>비밀번호 찾기</u></string>
    <string name="text_register"><u>회원가입</u></string>
    <string name="text_more"><u>더보기</u></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_password_reset">비밀번호 재설정</string>
    <string name="text_select">선택하기</string>
    <string name="text_member_withdraw">회원탈퇴</string>
    <string name="text_apove_cancel">게시거절</string>
    <string name="text_comment_report">댓글 신고하기</string>
    <string name="title_color_palette">색상 선택</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="error_message_for_service_unavailable">서비스 연결상태가 좋지 않습니다.\n\n잠시 후 다시 시도해 주세요.</string>
    <string name="usermgmg_signup_button">가입</string>
    <string name="usermgmg_name">이름을 입력하세요.</string>
    <string name="usermgmg_age">나이를 입력하세요.</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="facebook_app_id">2794858993908605</string>
    <string name="fb_login_protocol_scheme">fb2794858993908605</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="twitter_consumer_key">KhXNh30uW8eP6ubBqHPJ131Yn</string>
    <string name="twitter_consumer_secret">ldgI8fzXg2VDhZeUaUyhs7eDhVRjyUHiEbYHJHL9VcN3Ys9R8T</string>
</resources>